--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
 			<div id="layerslider" style="width:100%;height:650px;">
 				<!-- first slide -->
 				<div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
+					<img src="img/slides/slide_4.jpg" class="ls-bg" alt="Slide background">
+					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top: 45%; left: 60px; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase; font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">La mejor inversión, tu seguridad.</h3>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Brindamos un servicio confiable y accesible</p>
+					<a class="ls-l button_intro " style="top:65%; left:60px;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="/Perfil-empresarial-Alfapaz.pdf" download="Perfil-empresarial-Alfapaz">Nuestro Brochure</a>
+				</div>
+				<!-- first slide1.1 -->
+				<div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
 					<img src="img/slides/slide_1.jpg" class="ls-bg" alt="Slide background">
 					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top: 45%; left: 60px; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase; font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">La mejor inversión, tu seguridad.</h3>
 					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">Brindamos un servicio confiable y accesible</p>
